tests/paczka1/small_fuzzy/49342717.err
Error in line 2: Nsn1Cyf8Acn S686 64,8
Error in line 10: VSf A412 98,5
